@@ -1,3 +1,12 @@
+2008-08-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
+	* Tomboy.mdp, Tomboy/Makefile.am: Rename
+	  GtkApplication.cs->WindowsApplication.cs
+	* Tomboy/Applet.cs: Implement ITomboyTray.
+	* Tomboy/Utils.cs: Remove commented-out code.
+	* Tomboy/GnomeApplication.cs: Implement new stuff from
+	  INativeApplication.
+
 2008-08-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
 	* Tomboy.csproj, Tomboy.sln: Upgrade to VS 2008 to see if it works
